# filesage

./: .gitignore  CopilotNotes.txt  FirstAttemptAtButtonintoRunningSMARTCTL.txt  New Suggestion to fix passwd fail.py  README.md  SecondAttemptAtButtonintoRunningSMARTCTL_getting passwd failed.txt  fscan.py  fsgui.py  main.py  pyproject.toml  requirements.txt
filesage/: __main__.py  cli.py  main_window.py
lib/: ANNOUNCE_fscan.py  LICENSE_fscan.py  LICENSE_fsgui.py
notes/: CopilotNotes.txt
tests/: conftest.py  test_cli.py  test_fscan_args.py  test_integration_pause_resume.py  test_print_log_validation.py
util/: disk_to_iso.sh  fdisk-l
