[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filesage"
version = "0.1.0"
description = "A small file utilities toolkit."
authors = [{ name = "brettjn" }]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
filesage = "filesage.cli:main"
